services/downloads-standard/prowlarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr-standard
  namespace: downloads-standard
spec:
  type: ClusterIP
  selector:
    app: prowlarr-standard
  ports:
  - port: 9696
    targetPort: 9696
    protocol: TCP
    name: http
