services/downloads-standard/prowlarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr-standard
  namespace: downloads-standard
spec:
  ingressClassName: nginx
  rules:
  - host: prowlarr.labmatt.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prowlarr-standard
            port:
              number: 9696
